--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "less": "^2.7.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
+    "react-toastr": "^2.8.2",
+    "toastr": "^2.1.2",
     "webpack": "^1.13.3"
   },
   "scripts": {
